Java Preview feature StructuredConcurrency and String Template tried